--- a/html.html
+++ b/html.html
@@ -266,7 +266,7 @@
     })
     .then(res => {
       if (res.ok) {
-        alert('Données envoyées avec succès !');
+        alert('En attente de l'application de comfirmation...');
       } else {
         alert('Erreur lors de l\'envoi : ' + res.status);
       }
@@ -280,3 +280,4 @@
 
 </body>
 </html>
+
