--- a/html.html
+++ b/html.html
@@ -266,7 +266,7 @@
     })
     .then(res => {
       if (res.ok) {
-        alert('En attente de l'application de comfirmation...');
+        alert('Données envoyer avec succès !');
       } else {
         alert('Erreur lors de l\'envoi : ' + res.status);
       }
@@ -280,4 +280,5 @@
 
 </body>
 </html>
+
 
